@@ -11,6 +11,7 @@ Open Vehicle Monitor System v3 - Change log
                          - Simcom: Check MUX status in NetWait state
                          - Simcom: Add a MuxStart sanity check timeout (120 seconds)
                          - Simcom: Check MUX status in NetMode state
+                         - Simcom: Refactor state timeouts for greater reliability
 
 2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                          - Update ovms_module to use new API for per-task heap info.
